# myshare-wetransfer

./: CHANGELOG.md  Cargo.toml  README.md  config.ini  readme.md  users.txt
.github/workflows/: rust.yml
pkg/common/: fshare.service
src/: app.rs  app_configs.rs  auth.rs  auth_middleware.rs  errors.rs  main.rs  upload.rs  utils.rs
src/authenticator/: mod.rs  pam.rs  passwd.rs
static/css/: styles.css
static/js/: app.js
templates/: files.html  home.html  layout.html
