[package]
name = "fshare"
version = "0.1.0"
authors = ["nuno <1140358@isep.ipp.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
sanitize-filename = "0.3.0"
tera = "1.12.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.17"
actix-files = "0.5.0"
zip = "0.5.12"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"